Todos os endpoints de Viagem funcionando, exceto o Update.