@@ -3,8 +3,6 @@ package br.com.transportes.apitransportes.service;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.springframework.beans.BeanUtils;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import br.com.transportes.apitransportes.entity.Motorista;
@@ -12,12 +10,14 @@ import br.com.transportes.apitransportes.entity.Veiculo;
 import br.com.transportes.apitransportes.exception.EntidadeNaoEncontradaException;
 import br.com.transportes.apitransportes.mapper.DestinosMapper;
 import br.com.transportes.apitransportes.mapper.ViagensMapper;
+import br.com.transportes.apitransportes.repository.MaterialQuantidadeSetorRepository;
 import br.com.transportes.apitransportes.repository.ViagensRepository;
 import br.com.transportes.server.model.Confirmacao;
 import br.com.transportes.server.model.Destino;
 import br.com.transportes.server.model.Encerramento;
 import br.com.transportes.server.model.UpsertViagem;
 import br.com.transportes.server.model.Viagem;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -31,35 +31,78 @@ public class ViagensService {
 	private final MotoristasService motoristasService;
 	private final VeiculosService veiculosService;
 
+	private final MaterialQuantidadeSetorRepository materialQuantidadeSetorRepository;
+
 	private final ViagensMapper viagensMapper;
 	private final DestinosMapper destinosMapper;
 
-	public Viagem upsertViagem(String viagemId, UpsertViagem upsertViagem) {
-		if (viagemId.isBlank() || viagemId.isEmpty()) {
-			Motorista motorista = motoristasService.encontrarMotoristaPorId(
-					String.valueOf(upsertViagem.getMotoristaId()));
-			Veiculo veiculo = veiculosService.encontrarVeiculoPorId(String.valueOf(upsertViagem.getVeiculoId()));
-			List<br.com.transportes.apitransportes.entity.Destino> destinosEncontrados =
-					destinosService.findAllByIdIsIn(
-					upsertViagem.getDestinos());
-
-			br.com.transportes.apitransportes.entity.Viagem salvarViagem = viagensMapper.toViagemEntity(upsertViagem,
-					motorista, veiculo, destinosEncontrados);
-			salvarViagem.desconfirmar();
-
-			br.com.transportes.apitransportes.entity.Viagem viagemSalva = viagensRepository.save(salvarViagem);
-
-			return viagensMapper.toViagemDto(viagemSalva);
+	public Viagem upsertViagem(Integer id, UpsertViagem upsertViagem) {
+		if (id == null) {
+			return salvarNovaViagem(upsertViagem);
 		} else {
-			br.com.transportes.apitransportes.entity.Viagem encontrada = encontrarViagemPorId(viagemId);
-			BeanUtils.copyProperties(upsertViagem, encontrada);
-
-			br.com.transportes.apitransportes.entity.Viagem viagemEditada = viagensRepository.save(encontrada);
-			return viagensMapper.toViagemDto(viagemEditada);
+			return editarViagemExistente(id, upsertViagem);
 		}
 	}
 
-	public void confirmaViagem(String id, Confirmacao confirmacao) {
+	@Transactional
+	private Viagem salvarNovaViagem(UpsertViagem upsertViagem) {
+		Motorista motorista = getMotorista(upsertViagem);
+		Veiculo veiculo = getVeiculo(upsertViagem);
+		List<br.com.transportes.apitransportes.entity.Destino> destinosEncontrados = getNovosDestinosParaAViagem(
+				upsertViagem);
+
+		br.com.transportes.apitransportes.entity.Viagem viagemParaSalvar = gerarViagemParaSalvar(upsertViagem,
+				motorista, veiculo, destinosEncontrados);
+		viagemParaSalvar.desconfirmar();
+
+		br.com.transportes.apitransportes.entity.Viagem viagemSalva = viagensRepository.save(viagemParaSalvar);
+		destinosEncontrados.forEach(destino -> destino.setViagem(viagemSalva));
+		destinosService.salvarTodos(destinosEncontrados);
+
+		return viagensMapper.toViagemDto(viagemSalva);
+	}
+
+	private Motorista getMotorista(UpsertViagem upsertViagem) {
+		String motoristaId = String.valueOf(upsertViagem.getMotoristaId());
+		Motorista motorista = motoristasService.encontrarMotoristaPorId(motoristaId);
+		return motorista;
+	}
+
+	private Veiculo getVeiculo(UpsertViagem upsertViagem) {
+		String veiculoId = String.valueOf(upsertViagem.getVeiculoId());
+		Veiculo veiculo = veiculosService.encontrarVeiculoPorId(String.valueOf(veiculoId));
+		return veiculo;
+	}
+
+	private br.com.transportes.apitransportes.entity.Viagem gerarViagemParaSalvar(UpsertViagem upsertViagem,
+			Motorista motorista, Veiculo veiculo,
+			List<br.com.transportes.apitransportes.entity.Destino> destinosEncontrados) {
+		return viagensMapper.toViagemEntity(upsertViagem, motorista, veiculo, destinosEncontrados);
+	}
+
+	@Transactional
+	private Viagem editarViagemExistente(Integer id, UpsertViagem upsertViagem) {
+		br.com.transportes.apitransportes.entity.Viagem viagemParaEditar = encontrarViagemPorId(id);
+		limparListaDeDestinos(id);
+
+		List<br.com.transportes.apitransportes.entity.Destino> novosDestinos = getNovosDestinosParaAViagem(
+				upsertViagem);
+		viagemParaEditar.setDestinos(novosDestinos);
+		novosDestinos.forEach(destino -> destino.setViagem(viagemParaEditar));
+
+		return viagensMapper.toViagemDto(viagemParaEditar);
+	}
+
+	private List<br.com.transportes.apitransportes.entity.Destino> getNovosDestinosParaAViagem(
+			UpsertViagem upsertViagem) {
+		return destinosService.findAllByIdIsIn(upsertViagem.getDestinos());
+	}
+
+	private void limparListaDeDestinos(Integer id) {
+		destinosService.excluirDestinosByViagemId(id);
+	}
+
+	public void confirmaViagem(Integer id, Confirmacao confirmacao) {
 		br.com.transportes.apitransportes.entity.Viagem encontrada = encontrarViagemPorId(id);
 
 		if ("CONFIRMADO".equals(confirmacao.getConfirmacao().toString())) {
@@ -72,29 +115,30 @@ public class ViagensService {
 
 	public List<Viagem> listarViagens() {
 		List<br.com.transportes.apitransportes.entity.Viagem> encontradas =
-				viagensRepository.findAll(Sort.by(Sort.Direction.ASC)).stream().filter(item -> !item.isExcluido())
-						.toList();
-		//		return encontradas.stream().map(viagensMapper::toViagemDto).collect(Collectors.toList());
-		return null;
+				viagensRepository.findAll();//.stream().filter(item -> !item.isExcluido())
+		//.toList();
+		log.error("encontradas = " + encontradas);
+		return encontradas.stream().map(viagensMapper::toViagemDto).collect(Collectors.toList());
 	}
 
-	public List<Destino> listarDestinosDaViagem(String id) {
-		br.com.transportes.apitransportes.entity.Viagem encontrada = encontrarViagemPorId(id);
-		return encontrada.getDestinos().stream().map(destinosMapper::toDestinoDto).collect(Collectors.toList());
+	public List<Destino> listarDestinosDaViagem(Integer id) {
+		List<br.com.transportes.apitransportes.entity.Destino> destinos = destinosService.trazerDestinosDaViagem(id);
+		return destinos.stream().map(destinosMapper::toDestinoDto).collect(Collectors.toList());
 	}
 
-	public void encerraViagem(String id, Encerramento encerramento) {
+	public void encerraViagem(Integer id, Encerramento encerramento) {
 		br.com.transportes.apitransportes.entity.Viagem encontrada = encontrarViagemPorId(id);
 
-		if ("ENCERRAR".equals(encerramento.getEncerramento().toString())) {
+		if ("ENCERRAR".equals(encerramento.getEncerrado().toString())) {
+			log.error("VIAGEM ID: {} ENCERRAR ==========================", id);
 			encontrada.encerrar();
 			viagensRepository.save(encontrada);
 		}
 	}
 
-	private br.com.transportes.apitransportes.entity.Viagem encontrarViagemPorId(String id)
+	private br.com.transportes.apitransportes.entity.Viagem encontrarViagemPorId(Integer id)
 			throws NumberFormatException {
-		Long idLong = Long.parseLong(id);
+		Long idLong = Long.parseLong(String.valueOf(id));
 		return viagensRepository.findById(idLong)
 				.filter(item -> !item.isExcluido())
 				.orElseThrow(() -> new EntidadeNaoEncontradaException(
